# homelab

./: .gitignore  AGENTS.md  README.md  com.llamactl.plist  justfile  opencode.json  start_llamactl.sh  stop_llamactl.sh  update_llamacpp.sh  update_llamactl.sh
agentkit/: Dockerfile  assistant.py  config.yaml  create_anki_deck.py  docker-compose.yaml  justfile  lab.agentkit.plist  notes_agent.py  pyproject.toml
agentkit/agents/: notes_agent.py
agentkit/chatbots/: assistant.py
agentkit/plugins/agents/: architect.py  default.py  workout.py
agentkit/plugins/chatbots/: default.py
agentkit/plugins/skills/anki/: SKILL.md
agentkit/plugins/skills/german_notes/: SKILL.md
agentkit/plugins/skills/language_tutor/: SKILL.md
agentkit/plugins/tools/: anki.py  base_notes.py  cs_notes.py  dictionary.py  geocode.py  german_notes.py  gitea_notes.py  knowledge_base.py  recipes_notes.py  services.py  skills.py  tasks.py  time.py  web_tools.py  workout.py
agentkit/tools/: notes.py  tasks.py
mikoshi/: config.yaml  justfile  lab.mikoshi.plist  pyproject.toml
mikoshi/plugins/agents/: architect.py  code.py  default.py  notes.py  reachy.py  research.py  workout.py
mikoshi/plugins/tools/: anki.py  base_notes.py  cs_notes.py  dictionary.py  geocode.py  german_notes.py  knowledge_base.py  opencode.py  reachy.py  recipes_notes.py  services.py  skills.py  tasks.py  time.py  web_tools.py  workout.py
reachy/voice_assistant/: README.md  pyproject.toml
reachy/voice_assistant/voice_assistant/: expressions.py  main.py  mikoshi_client.py  robot_api.py  sounds.py  stt.py  tts.py  vad.py  wake_word.py
(+66 files in other folders)
